# src/controllers/health.controller.ts
@@ -1,16 +1,6 @@
-import { Request, Response } from 'express';
+import type { Request, Response } from 'express';
 
-/**
- * Realiza o health check da API.
- * @route GET /api/health
- * @param _req Express Request
- * @param res Express Response
- */
 export const healthCheck = (_req: Request, res: Response) => {
     const env = process.env.NODE_ENV || 'UNKNOWN';
-    res.status(200).json({
-        data: { status: 'API Funcionando!', environment: env },
-        message: null,
-        errors: null,
-    });
+    res.ok({ status: 'API Funcionando!', environment: env });
 };
