# src/routes/health.routes.ts
@@ -3,10 +3,7 @@ import { healthCheck } from '../controllers/health.controller';
 
 const router = express.Router();
 
-// Rota de health check
 router.get('/health', healthCheck);
-
-// Rota de health check alternativa
 router.get('/healthcheck', healthCheck);
 
 export default router;
